feat: set animations

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,12 @@ header {
   font-weight: 700;
   font-size: 20px;
   line-height: 24px;
+  width: 100px;
   color: #fff;
+}
+
+#logo img {
+  width: 100%;
 }
 
 #headline {
