--- a/assets/css/style-768.css
+++ b/assets/css/style-768.css
@@ -75,19 +75,18 @@
 
   .project-card-1 {
     display: grid;
-    column-gap: 24px;
+    column-gap: 1em;
     grid-template-columns: 3fr 2fr;
     grid-template-areas:
       "img title"
       "img content"
       "img tags"
-      "img button"
-      "img .";
+      "img button";
   }
 
   .project-card-1 img {
     width: 100%;
-    height: 100%;
+    aspect-ratio: auto;
     transition: scale 500ms;
   }
 
@@ -96,19 +95,24 @@
   }
 
   .project-card-1 button {
-    width: 30%;
+    width: 15em;
   }
 
   .project-card-1 h1 {
-    font-size: 40px;
-    line-height: 52px;
+    font-size: 1.5em;
+    line-height: 1.5em;
+    margin-top: 0;
     color: #091e42;
+  }
+
+  .project-card-1 p {
+    margin: 0;
   }
 
   #projects-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 24px;
+    grid-template-columns: 1fr 1fr;
+    gap: 5%;
   }
 
   .project-card {
@@ -148,14 +152,13 @@
 
   #skills-block {
     flex-direction: row;
-    align-items: flex-start;
-    justify-content: center;
-    padding: 130px 142px;
-    gap: 176px;
+    justify-content: space-evenly;
+    padding: 130px 0;
   }
 
   #skills-block ul {
-    align-items: flex-start;
+    justify-content: center;
+    padding-left: 0;
   }
 
   footer {
